--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <title>Redirecting</title>
   <noscript>
-    <meta http-equiv="refresh" content="1; url=https://www.x-studio.net/downloads" />
+    <meta http-equiv="refresh" content="1; url=https://en.x-studio.net/downloads" />
   </noscript>
   <script>
-    window.location.href = 'https://www.x-studio.net/downloads';
+    window.location.href = 'https://en.x-studio.net/downloads';
   </script>
 </head>
 <body>
-  Redirecting to <a href="https://www.x-studio.net/downloads">https://www.x-studio.net/downloads</a>
+  Redirecting to <a href="https://en.x-studio.net/downloads">https://en.x-studio.net/downloads</a>
 </body>
 </html>
